--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustylemon"
+name = "lmdb-graph"
 version = "0.1.0"
 authors = ["Kevin Oberlies <favilo@gmail.com>"]
 edition = "2018"
