--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rmpv = "0.4.5"
 serde = { version = "1.0.115", features = ["derive"] }
 ulid = { version = "0.4.0", features = ["serde"] }
 supercow = "0.1.0"
+itertools = "0.9.0"
 
 [dev-dependencies]
 env_logger = "0.7.1"
