--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Kevin Oberlies <favilo@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+#
+[[bench]]
+name = "criterion_bench"
+harness = false
 
 [dependencies]
 itertools = "0.9.0"
@@ -14,6 +18,7 @@ serde = { version = "1.0.115", features = ["derive"] }
 supercow = "0.1.0"
 ulid = { version = "0.4.0", features = ["serde"] }
 postcard = { version = "0.5.1", features = ["use-std"] }
+tempfile = "3.1.0"
 
 [dependencies.heed]
 version = "0.8.1"
@@ -22,6 +27,7 @@ default-features = false
 
 [dev-dependencies]
 env_logger = "0.7.1"
-tempdir = "0.3.7"
-rstest = "0.6.4"
 galvanic-assert = "0.8.7"
+rstest = "0.6.4"
+tempfile = "3.1.0"
+criterion = "0.3.3"
