--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,36 +1,11 @@
-[package]
-name = "lmdb-graph"
-version = "0.1.0"
-authors = ["Kevin Oberlies <favilo@gmail.com>"]
-edition = "2018"
+[workspace]
+members = [
+    "gremlite",
+    "gremlite_cli",
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-#
-[[bench]]
-name = "criterion_bench"
-harness = false
+[profile.bench]
+debug = true
 
-[dependencies]
-itertools = "0.9.0"
-log = "0.4.11"
-rand = "0.7.3"
-serde = { version = "1.0.115", features = ["derive"] }
-supercow = "0.1.0"
-ulid = { version = "0.4.0", features = ["serde"] }
-postcard = { version = "0.5.1", features = ["use-std"] }
-tempfile = "3.1.0"
-parking_lot = "0.11.0"
-thiserror = "1.0.20"
-
-[dependencies.heed]
-version = "0.8.1"
-features = ["mdbx"]
-default-features = false
-
-[dev-dependencies]
-env_logger = "0.7.1"
-galvanic-assert = "0.8.7"
-rstest = "0.6.4"
-tempfile = "3.1.0"
-criterion = "0.3.3"
-parking = "2.0.0"
+[profile.release]
+debug = 1
