--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ ulid = { version = "0.4.0", features = ["serde"] }
 postcard = { version = "0.5.1", features = ["use-std"] }
 tempfile = "3.1.0"
 parking_lot = "0.11.0"
+thiserror = "1.0.20"
 
 [dependencies.heed]
 version = "0.8.1"
@@ -32,3 +33,4 @@ galvanic-assert = "0.8.7"
 rstest = "0.6.4"
 tempfile = "3.1.0"
 criterion = "0.3.3"
+parking = "2.0.0"
